--- a/examples/hello_world/Makefile.hello_world.is
+++ b/examples/hello_world/Makefile.hello_world.is
@@ -2,8 +2,8 @@ all:
 	mkdir -p .obj/
 	gcc -O2 -c .src/hello_world.c -o .obj/hello_world.o
 	mkdir -p .obj/modules/cli
-	gcc -O2 -c /home/lynx/projects/test_is/.is/modules//cli/functions.c -o .obj/modules/cli/functions.o
-	gcc -O2 .obj/hello_world.o  .obj/modules/cli/functions.o -o .obj/hello_world.out
+	cp /home/lynx/projects/implementation_schema/examples/hello_world/.is/modules//cli/cli.h .obj/modules/cli/
+	gcc -O2  -I.obj/modules/cli/ .obj/hello_world.o  -o .obj/hello_world.out
 
 clean:
 	rm -rf .obj/
